# django-drf-vincent-blog

./: Makefile  README.md  pyproject.toml
posts/: models.py  serializers.py  urls.py
posts/migrations/: 0001_initial.py
project/: settings.py  urls.py
